dnl $Id: configure.in,v 1.3 2003/03/11 18:31:19 gozer Exp $

AC_PREREQ(2.60)
AC_INIT(mod_browserid, 0.1, gozer@apache.org)
AC_CONFIG_AUX_DIR(build)
AC_CONFIG_MACRO_DIR([build])

AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([build/mod_auth_browserid.spec])

AC_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

AX_WITH_APXS(no, [$PATH:/sbin:/usr/sbin:/usr/local/sbin])

if test "$apxs_found" = no ; then
    AC_MSG_ERROR([apxs is required])
fi

LIBCURL_CHECK_CONFIG([],[],[],[
    AC_MSG_ERROR([libcurl is required])
])

AC_CHECK_LIB([yajl],[yajl_tree_parse])

AC_PROG_PERL_VERSION(5.8.0)
AC_PERL_MODULE_VERSION(Apache::Test 0, , AC_MSG_ERROR(Need some Perl modules))
AC_C_CONST

AM_MAINTAINER_MODE

AC_OUTPUT(Makefile)
